--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,18 @@ h1 {
     text-align: center;
 }
 
+span {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    margin-bottom: 20px;
+}
+
+span img, span iframe {
+    max-width: 100%;
+    height: auto;
+}
+
 footer {
     text-align: center;
     font-weight: bold;
